	  Xrender.

	Bug fixes

	- Reading of .pbm image files is fixed: 1 is now interpreted as
	  black, and images of width a multiple of 8 are correctly read.
	  Note: if you relied on the faulty behavior you may need to fix
	  your image files.
	- Restored window background drawing, particularly the 'plastic'
	  scheme's background (STR #3059). This was a regression since
	  FLTK 1.3.0.


CHANGES IN FLTK 1.3.3					RELEASED: Nov 03 2014

	New features and extensions

	- New class Fl_Copy_Surface allows copying graphical data to the
	  clipboard in a cross-platform way (STR #3058).
	- Support for pasting graphical data from the clipboard to a widget.
	- New class Fl_Image_Surface allows drawing into an Fl_Image object.
	- Methods Fl::add_clipboard_notify() and Fl::remove_clipboard_notify()
	  to get notifications whenever the clipboard changes (STR #2636).
	- New method Fl_Window::wait_for_expose() (STR #3124, STR #3129).
	- New bilinear scaling method for RGB images (STR #2869, STR #3062).
	- New method Fl_Widget::top_window() (STR #2948).
	- New method Fl_Widget::top_window_offset() (part of STR #2944).
	- New Fl_Tree_Item methods label_x(), label_y(), label_w(), label_h().
	- New methods Fl::enable_im() and Fl::disable_im() to enable/disable
	  system Input Methods (IM).
	- New methods Fl::add_system_handler() and Fl::remove_system_handler()
	  to intercept low level system events.
	- New FLTK scheme "gleam" (STR #2672).
	- New method Fl::is_scheme() to compare the current scheme name.
	- New method to set custom icons for windows (STR #2816),
	  see Fl_Window::icon() for more info.
	- New method to set any custom cursor, based on a Fl_RGB_Image object.
	  Also changed fallback cursors to use this method, so that fallback
	  cursors are handled in a platform independent manner (STR #2660).
	- New ability to convert Fl_Pixmap to Fl_RGB_Image (STR #2659).
	- Support for full screen windows over multiple monitors.